edit diplomas page and add play cpurses page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,3 +582,5 @@ button.border-0:nth-child(3)
   color: #fff;
   border-color: #d0d0d2;
 }
+/**********************plau courses*****************************/
+
